center figure in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,9 +25,9 @@ knitr::opts_chunk$set(
 
 **COCA** is a two-stage randomized phase II design that seamlessly integrates combination dose optimization with component contribution assessment. In stage 1, the optimal combination dose is determined by maximizing the risk–benefit tradeoff across multiple candidate combination doses. In stage 2, a multi-arm randomized phase is initiated to evaluate the contribution of each component within the combination therapy.
 
-<div style="text-align: center;">
+<p align="center">
   <img src="./man/figures/flowchart_v0.png" width="80%"/>
-</div>
+</p>
 
 
 ### Installation
